--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Lobster&display=swap') repeat scroll 0 0 rgba(0, 0, 0 , 0);
+
 html {
 	box-sizing: border-box;
 	font-family: "Arial Rounded MT Bold", "Helvetica Rounded", Arial, sans-serif
@@ -10,12 +12,19 @@ html {
   }
 
   body {
+	background: #fff;
 	margin: 0;
 	min-height: 100vh;
-	background: linear-gradient(45deg, hsla(340, 100%, 55%, 1) 0%, hsla(340, 100%, 55%, 0) 70%),
-	linear-gradient(135deg, hsla(225, 95%, 50%, 1) 10%, hsla(225, 95%, 50%, 0) 80%),
-	linear-gradient(225deg, hsla(140, 90%, 50%, 1) 10%, hsla(140, 90%, 50%, 0) 80%),
-	linear-gradient(315deg, hsla(35, 95%, 55%, 1) 100%, hsla(35, 95%, 55%, 0) 70%);
+	animation: scroll 70s linear infinite;
+	background: url("https://images.unsplash.com/photo-1465146633011-14f8e0781093?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=3450&q=80"), #111111;
+	color: #eee;
+	height: 100vh;
+	min-width: 360px;
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	perspective: 1000px;
+	perspective-origin: 50% 50%;
   }
 
   h2 {
@@ -45,6 +54,10 @@ html {
 	padding: 0;
 	display: flex;
 	justify-content: center;
+  }
+
+  p, span {
+	color: #111111;
   }
 
   .cool>li {
