--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css?family=Lobster&display=swap') repeat scroll 0 0 rgba(0, 0, 0 , 0);
-
 html {
 	box-sizing: border-box;
 	font-family: "Arial Rounded MT Bold", "Helvetica Rounded", Arial, sans-serif
@@ -26,6 +24,24 @@ html {
 	perspective: 1000px;
 	perspective-origin: 50% 50%;
   }
+
+  @keyframes scroll {
+	100%{
+	 background-position:0px -3000px;
+   }
+ }
+ 
+ @media (prefers-reduced-motion) {
+   .wrapper {
+	 animation: scroll 200s linear infinite;
+   }
+ }
+ 
+ @media (min-width: 670px) {
+   .title {
+	 font-size: 5rem;
+   }
+ }
 
   h2 {
 	margin-top: 0;
