--- a/CSS/style.css
+++ b/CSS/style.css
@@ -173,10 +173,13 @@ html {
   .button[href*=twitter] {
 	background: #019FE9;
   }
-
   .button[href*=facebook] {
-	background: #3B5998;
+	background: #05405b;
   }
+
+  .button[href*=linkedin] {
+	background: #3B5998;
+  } 
 
   .button[href*=courses] {
 	background: #ffc600;
